--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,12 +1,17 @@
 
-.friend-item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
+.friendItem {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
+  display: flex;
+  align-items: center;
+  gap: 10px;
   }
   
-  .friend-item img {
+  .friendItem img {
     margin-right: 10px;
+    border-radius: 50%;
   }
   
   .status {
@@ -14,11 +19,11 @@
     margin-left: 10px;
   }
   
-  .status-online {
+  .statusOnline {
     color: green;
   }
   
-  .status-offline {
+  .statusOffline {
     color: red;
   }
   
